# line

./: .gitignore
extensions/linkedin-connected-search/: README.md  background.js  manifest.json  popup.html  popup.js
extensions/linkedin-profile-extractor/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extensions/linkedin-resume-downloader-cdp/: README.md  background.js  manifest.json  popup.html  popup.js
flow/: README.md  pyproject.toml
flow/src/flow/pipelines/: __init__.py  competency_card_batch_flow.py  competency_card_flow.py  competency_card_shared.py  resume_extraction_batch_flow.py  resume_faiss_backfill_flow.py  resume_knn_search_flow.py  resume_profile_flatten_flow.py
flow/src/flow/prompts/: agent.md  resume_parser.md
flow/src/flow/schemas/: __init__.py  competency_card.py  resume_profile.py
flow/src/flow/services/: __init__.py  card_generator.py  pdf_extractor.py  person_attributes.py  resume_extractor.py  resume_indexer.py
flow/tests/: test_competency_card_batch_flow.py  test_person_attributes.py  test_resume_extraction_batch_flow.py  test_resume_faiss_backfill_flow.py  test_resume_knn_search_flow.py  test_resume_profile_flatten_flow.py
